--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -19,18 +19,26 @@ jobs:
         java-version: '23'
         distribution: 'temurin'
 
-    - name: Setup Eclipse
+    - name: Setup Eclipse PDE Build
       run: |
-        wget https://download.eclipse.org/technology/epp/downloads/release/2024-03/R/eclipse-java-2024-03-R-linux-gtk-x86_64.tar.gz
-        tar xzf eclipse-java-2024-03-R-linux-gtk-x86_64.tar.gz
-        
-    - name: Run Eclipse PDE Build
+        mkdir -p tools
+        cd tools
+        wget https://download.eclipse.org/eclipse/downloads/drops4/R-4.31-202403061644/eclipse-platform-4.31-linux-gtk-x86_64.tar.gz
+        tar xzf eclipse-platform-4.31-linux-gtk-x86_64.tar.gz
+        cd eclipse/plugins
+        # Extract only needed plugins for building
+        for plugin in org.eclipse.pde.build_*.jar org.eclipse.equinox.launcher_*.jar; do
+          jar xf $plugin
+        done
+
+    - name: Build Update Site
       run: |
-        ./eclipse/eclipse \
-          -noSplash \
+        cd tools/eclipse
+        ./eclipse \
           -application org.eclipse.ant.core.antRunner \
-          -data workspace \
-          -buildfile build.xml
+          -buildfile plugins/org.eclipse.pde.build/scripts/build.xml \
+          -Dbuilder=$GITHUB_WORKSPACE/update-site \
+          -DbaseLocation=$GITHUB_WORKSPACE/tools/eclipse
 
     - name: Upload update site
       if: success() && github.ref == 'refs/heads/main'
