--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -13,63 +13,27 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
-    - name: Set up Java 23
+    - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '23'
+        java-version: '21'
         distribution: 'temurin'
-
-    - name: Install Xvfb and dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y xvfb libxrender1 libxtst6 libxi6 libgtk-3-0
-
-    - name: Start Xvfb
-      run: |
-        Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-        echo "DISPLAY=:99.0" >> $GITHUB_ENV
-        sleep 3  # give xvfb some time to start
-
-    - name: Setup Eclipse
-      run: |
-        wget https://download.eclipse.org/technology/epp/downloads/release/2023-12/R/eclipse-committers-2023-12-R-linux-gtk-x86_64.tar.gz
-        tar xzf eclipse-committers-2023-12-R-linux-gtk-x86_64.tar.gz
+        cache: maven
         
-    - name: Install Dependencies
-      run: |
-        ./eclipse/eclipse -noSplash -clean -purgeHistory \
-          -application org.eclipse.equinox.p2.director \
-          -repository https://download.eclipse.org/releases/2023-12 \
-          -installIU org.eclipse.pde.feature.group,org.eclipse.jdt.feature.group,org.eclipse.e4.rcp.feature.group,org.eclipse.platform.feature.group
-
-    - name: Build Project
-      run: |
-        ./eclipse/eclipse \
-          -noSplash \
-          -application org.eclipse.ant.core.antRunner \
-          -data workspace \
-          -buildfile build.xml
-          
-    - name: Upload update site
-      if: success() && github.ref == 'refs/heads/main'
-      uses: actions/upload-pages-artifact@v2
+    - name: Cache Maven packages
+      uses: actions/cache@v3
       with:
-        path: update-site/target/site
-
-  deploy:
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    
-    permissions:
-      pages: write
-      id-token: write
-    
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-      
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+        
+    - name: Build with Maven/Tycho
+      run: mvn clean verify -Dtycho.localArtifacts=ignore
+        
+    - name: Deploy to GitHub Pages
+      if: github.ref == 'refs/heads/main'
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: update-site/target/repository
+        branch: gh-pages
+        clean: true
