--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,24 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up JDK
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
         
-    - name: Cache Maven packages
-      uses: actions/cache@v3
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v5
       with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
+        maven-version: '3.9.6'
         
-    - name: Build with Maven/Tycho
-      run: mvn clean verify -Dtycho.localArtifacts=ignore
+    - name: Build with Maven
+      run: mvn clean verify
         
     - name: Deploy to GitHub Pages
       if: github.ref == 'refs/heads/main'
